--- a/QuestPackages/m64/wdw/level/switches/switch_2/blocks_2.yml
+++ b/QuestPackages/m64/wdw/level/switches/switch_2/blocks_2.yml
@@ -24,7 +24,7 @@ variables:
 
 
 events:
-  show_switch_blocks_2:     "folder e_swc_2_pf_show_g1.e_swc_2_pf_show_g2"
+  show_switch_blocks_2:     "folder e_swc_2_pf_show_g1,e_swc_2_pf_show_g2"
   hide_switch_blocks_2:     "folder e_swc_2_pf_hide_g1,e_swc_2_pf_hide_g2"
 
 
