--- a/QuestPackages/m64/sml/stars/stars.yml
+++ b/QuestPackages/m64/sml/stars/stars.yml
@@ -13,7 +13,7 @@
 events:
   # Load stars
   init_stars:             "folder init_s1,init_s2,init_s3,init_s4,init_s5"  #,,,,init_s6,init_s8
-  reset_stars:            "folder deit_s1,deit_s2,deit_s3,deit_s4,deit_s5"  #,,,,deit_s6,deit_s8
+  deit_stars:             "folder deit_s1,deit_s2,deit_s3,deit_s4,deit_s5"  #,,,,deit_s6,deit_s8
 
   # Clear save
   wipe_stars:             "folder e_del_star_tags,e_clear_star_counter"
