--- a/QuestPackages/core/music/package.yml
+++ b/QuestPackages/core/music/package.yml
@@ -4,21 +4,21 @@ variables:
 events:
   e_stop_music:             "folder e_clear_objs,e_stop_music_cmd"
   e_clear_objs:             "folder e_obj_del_wait_bob,e_obj_del_wait_ssl,e_obj_del_wait_bbh,e_obj_del_wait_ss,e_obj_del_wait_hmc,e_obj_del_wait_jrb,e_obj_del_wait_ccm,e_obj_del_wait_boss,e_obj_del_wait_merrygo,e_obj_del_wait_powerup,e_obj_del_wait_metal"
-  #e_stop_music_if_enabled:  "if core-main.chk_tag_enable_music e_music_stop else core-main.e_dummy"
+  #e_stop_music_if_enabled:  "if !core-player_settings.chk_disable_music e_music_stop else core-main.e_dummy"
   e_stop_music_cmd:         "folder e_music_stop"
 
   e_force_stop_music:       "folder e_music_stop,e_stop_music"
   e_music_stop:             "opsudo stopsound %player% music"
 
-  e_play_bob:               "if core-main.chk_tag_enable_music e_do_play_bob          else core-main.e_dummy"
-  e_play_ssl:               "if core-main.chk_tag_enable_music e_do_play_ssl          else core-main.e_dummy"
-  e_play_bbh:               "if core-main.chk_tag_enable_music e_do_play_bbh          else core-main.e_dummy"
-  e_play_hmc:               "if core-main.chk_tag_enable_music e_do_play_hmc          else core-main.e_dummy"
-  e_play_jrb:               "if core-main.chk_tag_enable_music e_do_play_jrb          else core-main.e_dummy"
-  e_play_ccm:               "if core-main.chk_tag_enable_music e_do_play_ccm          else core-main.e_dummy"
-  e_play_merrygo:           "if core-main.chk_tag_enable_music e_do_play_merrygo      else core-main.e_dummy"
-  e_play_secret_slide:      "if core-main.chk_tag_enable_music e_do_play_secret_slide else core-main.e_dummy"
-  e_play_boss:              "if core-main.chk_tag_enable_music e_do_play_boss         else core-main.e_dummy"
+  e_play_bob:               "if !core-player_settings.chk_disable_music e_do_play_bob          else core-main.e_dummy"
+  e_play_ssl:               "if !core-player_settings.chk_disable_music e_do_play_ssl          else core-main.e_dummy"
+  e_play_bbh:               "if !core-player_settings.chk_disable_music e_do_play_bbh          else core-main.e_dummy"
+  e_play_hmc:               "if !core-player_settings.chk_disable_music e_do_play_hmc          else core-main.e_dummy"
+  e_play_jrb:               "if !core-player_settings.chk_disable_music e_do_play_jrb          else core-main.e_dummy"
+  e_play_ccm:               "if !core-player_settings.chk_disable_music e_do_play_ccm          else core-main.e_dummy"
+  e_play_merrygo:           "if !core-player_settings.chk_disable_music e_do_play_merrygo      else core-main.e_dummy"
+  e_play_secret_slide:      "if !core-player_settings.chk_disable_music e_do_play_secret_slide else core-main.e_dummy"
+  e_play_boss:              "if !core-player_settings.chk_disable_music e_do_play_boss         else core-main.e_dummy"
   e_play_powerup:           "folder e_do_play_powerup"
   e_play_metal:             "folder e_do_play_metal"
 
